--- a/DrivesViewer/DrivesViewer.csproj
+++ b/DrivesViewer/DrivesViewer.csproj
@@ -87,6 +87,9 @@
     <Compile Include="Views\SettingsForm.Designer.cs">
       <DependentUpon>SettingsForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Controls\PointDetailControl.resx">
+      <DependentUpon>PointDetailControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
